# Omega

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  install
docs/cmake/: CMakeLists.txt  Doxyfile  Doxyfile copy  Doxyfile.bak  dox  footer.html  footer2.html
docs/html/: _ellipse_8h_source.html  _square_8h_source.html  annotated.html  annotated_dup.js  class_ellipse-members.html  class_ellipse.html  class_ellipse.js  class_ellipse__coll__graph.map  class_ellipse__coll__graph.md5  class_ellipse__inherit__graph.md5  class_square-members.html  class_square.html  class_square.js  class_square__coll__graph.md5  class_square__inherit__graph.map  class_square__inherit__graph.md5  classdsid-members.html  classdsid.html  classdsid.js  classdsid__coll__graph.md5  classdsid__inherit__graph.map  classdsid__inherit__graph.md5  classelement_manager-members.html  classelement_manager.html  classelement_manager.js  classes.html  classisotropic_elastic-members.html  classisotropic_elastic.html  classisotropic_elastic.js  classisotropic_elastic__coll__graph.md5  classisotropic_elastic__inherit__graph.map  classisotropic_elastic__inherit__graph.md5  classmaterial-members.html  classmaterial.html  classmaterial.js  classmaterial__inherit__graph.map  classmaterial__inherit__graph.md5  classmaterial_factory-members.html  classmaterial_factory.html  classmaterial_factory.js  (+146 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  searchdata.js
docs/latex/: annotated.tex  class_ellipse.tex  class_ellipse__coll__graph.md5  class_ellipse__inherit__graph.md5  class_square.tex  class_square__coll__graph.md5  class_square__inherit__graph.md5  classdsid.tex  classdsid__coll__graph.md5  classdsid__inherit__graph.md5  classelement_manager.tex  classisotropic_elastic.tex  classisotropic_elastic__coll__graph.md5  classisotropic_elastic__inherit__graph.md5  classmaterial.tex  classmaterial__inherit__graph.md5  classmaterial_factory.tex  classmaterial_manager.tex  classmaterial_manager__inherit__graph.md5  classshape_function.tex  classshape_function_factory.tex  classshape_function_manager.tex  classsolver_manager.tex  classtask_manager.tex  dsid_8h.tex  dsid_8h__incl.md5  element_manager_8h.tex  element_manager_8h__dep__incl.md5  element_manager_8h__incl.md5  files.tex  hierarchy.tex  isotropic_elastic_8h.tex  isotropic_elastic_8h__incl.md5  material_manager_8h.tex  material_manager_8h__dep__incl.md5  material_manager_8h__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  (+15 more)
examples/01_test1/: 2Delastic.xml  dreamout.xml  dreamout2.xml  elas.xml  inputCheck.xml
examples/02_constitutive/: input.in
lib/: mathLib  tinyxml2
src/: elements  main.cpp  tinyxml2
src/classManager/: elementManager.cpp  elementManager.h  materialManager.cpp  materialManager.h  shapeFunctionManager.h  solverManager.cpp  solverManager.h  taskManager.cpp  taskManager.h
src/constitutive/: CMakeLists.txt  material.h  materialFactory.h
src/constitutive/damage/: dsid.cpp  dsid.h
src/constitutive/elastic/: isotropicElastic.cpp  isotropicElastic.h
src/constitutive/elastic/orig/: isotropicElastic.cpp
src/constitutive/src/: main.cpp
src/constitutive/src/classLib/: Ellipse.h  Square.h  isotropicElastic.cpp  isotropicElastic.h  material.h  materialFactory.cpp
src/taskManager/: taskManager.cpp  taskManager.h
